--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "typescript-eslint": "^8.20.0"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.9.5"
   }
 }
