--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
     "nodemon": "^3.1.9",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "express": "^4.21.2",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1"
   }
 }
