--- a/app/package.json
+++ b/app/package.json
@@ -6,14 +6,16 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "expo": "~52.0.30",
+    "expo": "~52.0.31",
     "expo-font": "~13.0.3",
     "expo-status-bar": "~2.0.1",
+    "intl": "^1.2.5",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-svg": "15.8.0",
     "styled-components": "^6.1.14"
   },
@@ -24,7 +26,10 @@
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
     "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
+    "prettier": "^3.4.2",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.22.0"
   },
