--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "expo": "~52.0.31",
     "expo-font": "~13.0.3",
     "expo-status-bar": "~2.0.1",
