--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.1"
   }
 }
