--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
